fix: prevent favorite button from overriding navigation z-index

--- a/client/src/components/cards/Card.scss
+++ b/client/src/components/cards/Card.scss
@@ -34,6 +34,7 @@
     right: 5px;
     width: 50px;
     height: 50px;
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
