--- a/client/src/components/favoriteIcon/FavoriteButton.scss
+++ b/client/src/components/favoriteIcon/FavoriteButton.scss
@@ -1,5 +1,4 @@
 .favorite-button {
-  z-index: 1000;
   cursor: pointer;
 
   &__inactive {
