--- a/client/src/components/navigation/Navigation.scss
+++ b/client/src/components/navigation/Navigation.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 100;
   padding: 1rem 2rem;
   background-color: transparent;
   display: flex;
